--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <body>
 
     <form class="container" action="love.html">
-        <h1>💖 A Little Love Questionnaire 💖</h1>
+        <h1>💖 Our Love Questionnaire 💖</h1>
 
-        <div class="question">
+        <div class="question:1">
             <label for="love">How much do you love me?</label>
             <select id="love">
                 <option>Select one</option>
@@ -81,29 +81,28 @@
                 <option>A lot</option>
                 <option>So much</option>
                 <option>More than anything</option>
-                <option>Infinity ♾️</option>
+                <option>Infinity♾️</option>
             </select>
         </div>
 
-        <div class="question">
+        <div class="question:2">
             <label for="date">Where should our next date be?</label>
             <select id="date">
                 <option>Select one</option>
-                <option>Dinner together</option>
-                <option>Movie night</option>
-                <option>Long walk & talking</option>
+                <option>Berlin</option>
+                <option>Vienna</option>
                 <option>Anywhere with you ❤️</option>
             </select>
         </div>
 
-        <div class="question">
+        <div class="question:3">
             <label for="future">Do you want forever with me?</label>
             <select id="future">
                 <option>Select one</option>
                 <option>Yes</option>
                 <option>Absolutely</option>
                 <option>Without a doubt</option>
-                <option>Forever and always 💍</option>
+                <option>Forever and always💍</option>
             </select>
         </div>
 
@@ -112,4 +111,5 @@
 
 </body>
 </html>
+
 
